20465 - Programing in C Lab/Project/Maman14-mac/.metadata/.plugins/org.eclipse.cdt.ui/Maman14.build.log
06:50:04 **** Incremental Build of configuration Debug for project Maman14 ****
make all 
Building file: ../src/validator.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/validator.d" -MT"src/validator.d" -o "src/validator.o" "../src/validator.c"
../src/validator.c:691:6: error: conflicting types for ‘validate_oper_operands’
 void validate_oper_operands (body* item, list_item_reference*  head){
      ^~~~~~~~~~~~~~~~~~~~~~
In file included from ../src/validator.c:3:0:
../src/validator.h:36:6: note: previous declaration of ‘validate_oper_operands’ was here
 void validate_oper_operands (body* item, list_item_reference *, String);
      ^~~~~~~~~~~~~~~~~~~~~~
make: *** [src/validator.o] Error 1
src/subdir.mk:27: recipe for target 'src/validator.o' failed

06:50:04 Build Finished (took 123ms)

